[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/interactable/green_button08.png" type="Texture" id=1]
[ext_resource path="res://src/ui/interactable/InteractPopup.gd" type="Script" id=2]

[node name="InteractPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.944946
margin_top = 0.944946
margin_right = -0.944946
margin_bottom = 0.944946
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="."]
margin_right = 31.0
margin_bottom = 29.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractLabel" type="Label" parent="Texture"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 31.0
margin_bottom = 29.0
text = "A"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 40.0
margin_right = 238.0
margin_bottom = 29.0
text = "Item"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
